# test_UpTrader

./: .gitignore  Makefile  README.md  load_data.py  pyproject.toml  setup.cfg
templates/tree_menu/: index.html
tree/: settings.py  urls.py
tree_menu/: admin.py  models.py  urls.py  views.py
tree_menu/migrations/: 0001_initial.py
tree_menu/templatetags/: draw_menu.py
